scenario-03-request-routing/manifests/blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: color-v1
  labels:
    app: color
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: color
      version: v1
  template:
    metadata:
      labels:
        app: color
        version: v1
    spec:
      containers:
        - name: color
          image: docker.io/hashicorp/http-echo:0.2.3
          args:
            - "-text=<h1 style='color: white; background-color: blue; padding: 50px; font-family: Arial;'>Blue Version (v1)</h1>"
            - "-listen=:8080"
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
