scenario-03-request-routing/manifests/color-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: color-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
