scenario-03-request-routing/manifests/virtual-service-cookie.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: color-service
spec:
  hosts:
    - "*"
  gateways:
    - color-gateway
  http:
    - match:
        - headers:
            cookie:
              regex: ".*user-type=premium.*"
      route:
        - destination:
            host: color-service
            subset: v3
            port:
              number: 80
    - route:
        - destination:
            host: color-service
            subset: v1
            port:
              number: 80
