scenario-03-request-routing/manifests/virtual-service-custom-header.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: color-service
spec:
  hosts:
    - "*"
  gateways:
    - color-gateway
  http:
    - match:
        - headers:
            x-beta:
              exact: "true"
      route:
        - destination:
            host: color-service
            subset: v3
            port:
              number: 80
    - route:
        - destination:
            host: color-service
            subset: v1
            port:
              number: 80
