scenario-03-request-routing/manifests/virtual-service-mirror.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: color-service
spec:
  hosts:
    - "*"
  gateways:
    - color-gateway
  http:
    - route:
        - destination:
            host: color-service
            subset: v1
            port:
              number: 80
          weight: 100
      mirror:
        host: color-service
        subset: v3
      mirrorPercentage:
        value: 100.0
