scenario-03-request-routing/manifests/virtual-service-uri.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: color-service
spec:
  hosts:
    - "*"
  gateways:
    - color-gateway
  http:
    - match:
        - uri:
            prefix: "/v3"
      route:
        - destination:
            host: color-service
            subset: v3
            port:
              number: 80
      rewrite:
        uri: "/"
    - match:
        - uri:
            prefix: "/v2"
      route:
        - destination:
            host: color-service
            subset: v2
            port:
              number: 80
      rewrite:
        uri: "/"
    - route:
        - destination:
            host: color-service
            subset: v1
            port:
              number: 80
