scenario-03-request-routing/manifests/virtual-service-user-agent.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: color-service
spec:
  hosts:
    - "*"
  gateways:
    - color-gateway
  http:
    - match:
        - headers:
            user-agent:
              regex: ".*Mobile.*|.*Android.*|.*iPhone.*|.*iPad.*"
      route:
        - destination:
            host: color-service
            subset: v2
            port:
              number: 80
    - route:
        - destination:
            host: color-service
            subset: v1
            port:
              number: 80
